# swc-plugin-strip-components

./: .gitignore  Cargo.toml  Readme.md  package.json  pnpm-lock.yaml  swc_plugin_strip_components.wasm
src/: is_client_module.rs  lib.rs
tests/: fixture.rs
tests/fixture/simple component/: input.ts  output.ts  utilities.ts
tests/fixture/use client/: ClientComponentInput.tsx  ClientComponentOutput.tsx
tests/fixture/use client bulk exports/: ClientComponentInput.tsx  ClientComponentOutput.tsx
