[package]
name = "swc_plugin_strip_components"
version = "0.1.2"
edition = "2021"
authors = ["Alessio Gravili"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
# This removes more dead code
codegen-units = 1
lto = true
# Optimize for size
opt-level = "s"

# Strip debug symbols
strip = "symbols"

[dependencies]
serde = "1"
swc_core = { version = "0.92.*", features = ["ecma_plugin_transform"] }
swc_ecma_parser = "0.144.1"
# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.


[dev-dependencies]
testing = "0.35.24"
